# rtl_biast

./: CMakeLists.txt  Note  librtlsdr.c  tuner_r82xx.c
include/: CMakeLists.txt  rtl-sdr.h  tuner_r82xx.h
src/: CMakeLists.txt  librtlsdr.c  rtl_biast.c  tuner_r82xx.c
